--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "express": "^5.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
