--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.14.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
